--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-component-library",
+  "name": "@zildjianjaxolis/react-component-library",
   "version": "1.0.0",
   "main": "build/index.js",
   "module": "build/index.esm.js",
@@ -41,29 +41,35 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "^7.16.7",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@storybook/react": "^6.3.7",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/react": "^6.4.9",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^24.9.1",
-    "@types/react": "^16.14.14",
+    "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
-    "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
+    "babel-loader": "^8.2.3",
+    "babel-preset-react-app": "^10.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "rollup": "^2.56.3",
+    "rollup": "^2.63.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.29.0",
     "sass-loader": "^10.2.0",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.4.2"
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "npm-check-updates": "^12.1.0"
   }
 }
